# dzn-examples

./: .gitignore  README.md
call-result-or-error/: Error.hpp  README.md  example-glue.cpp  example-usage.cpp  example-usage.dzn  result.dzn
custom-logging/: README.md  custom-dzn-logging.hpp
example-project/: CMakeLists.txt  README.md  airlock.cpp  airlock.hpp  dznlint.config.json  hardware.hpp  logging.hpp  verify-dzn.sh
example-project/dzn-src/: Airlock.dzn  AirlockSystem.dzn  IAirlock.dzn
example-project/dzn-src/armor/: AirlockArmor.dzn  DoorArmor.dzn  VacuumArmor.dzn
example-project/dzn-src/components/: IDoor.dzn  IVacuum.dzn
example-project/dzn-src/types/: string.dzn
example-project/dzn-src/utils/: logging.dzn  promise.dzn  result.dzn  timer.dzn
example-project/glue/: GlueDoor.cpp  GlueDoor.hpp  GlueVacuum.cpp  GlueVacuum.hpp  custom-dzn-logging.hpp
example-project/glue/foreign-components/: PromiseFC.hh  TimerFC.hh  example_dezyne_utils_PromiseFC.hh  example_dezyne_utils_TimerFC.hh
example-project/glue/injected/: ErrorHelper.hpp  InjectedGlueBase.hpp  Logging.hpp
example-project/test/: testairlock.cpp
example-project/types/: Error.hpp
promise-synchronization/: README.md  promise.dzn  utils_PromiseFC.hh
timers/: README.md  timer.dzn  utils_Timer.hh
